<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".control.control.RegistroActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/gestionar"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editBuscarGes"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/buscar"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <ImageButton
            android:id="@+id/btnBuscarGes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/background_light"
            android:tint="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/editBuscarGes"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <ImageView
            android:id="@+id/imgCargaGes"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lvListaResultados"
            app:srcCompat="@drawable/icono_galeria" />

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_dark"
            android:text="@string/actualizar"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toStartOf="@+id/btnRegistrarGes"
            app:layout_constraintTop_toBottomOf="@+id/spTipoGes" /><![CDATA[


        android:background="@color/colorPrimaryDark"
            android:text="@string/eliminar"
            android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spTipoGes" />

        ]]>

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/bg_dark"
            android:text="@string/eliminar"
            android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnActualizar" />

        <Button
            android:id="@+id/btnRegistrarGes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_dark"
            android:text="@string/registrar"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spTipoGes" />

        <EditText
            android:id="@+id/editNombreGes"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCargaGes" />

        <EditText
            android:id="@+id/editDescGes"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNombreGes" />

        <EditText
            android:id="@+id/editUbicaGes"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/ubicacion"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDescGes" />

        <ListView
            android:id="@+id/lvListaResultados"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editBuscarGes" />

        <Spinner
            android:id="@+id/spTipoGes"
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:entries="@array/tipos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUbicaGes" />

        <ImageButton
            android:id="@+id/btnCargarImaGes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/background_light"
            android:tint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/editNombreGes"
            app:layout_constraintStart_toEndOf="@+id/imgCargaGes"
            app:layout_constraintTop_toTopOf="@+id/imgCargaGes"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageButton
            android:id="@+id/btnCargarDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorBlanco"
            android:tint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/stat_sys_download_done" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>